# ZoneWatch

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
.github/: copilot-instructions.md
backend/: .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_emergency_dispatch_predictions.py
backend/app/: main.py
backend/app/api/routers/: emergency_prediction.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  emergency.py
backend/app/repositories/: __init__.py  emergency.py
backend/app/schemas/: __init__.py  emergency.py
backend/app/services/: __init__.py  emergency_prediction.py
backend/mlruns/0/: meta.yaml
backend/tests/: conftest.py
backend/tests/api/routers/: test_emergency_prediction.py
backend/tests/services/: test_dagshub_integration.py  test_emergency_prediction_service.py
frontend/: Dockerfile  tsconfig.app.json
frontend/src/: config.ts  main.tsx
frontend/src/data/: colorMappingData.ts
frontend/src/pages/: Home.tsx  Upload.tsx
frontend/src/types/: HeatmapTypes.ts
jupyter/: Dockerfile
jupyter/notebooks/: TestModel.ipynb
mlflow-tracking/: Dockerfile
public/data/: asahi.geojson  sample.csv
src/: main.tsx
src/components/common/: NavigationGuard.tsx  ScrollableContainer.tsx  theme.ts
src/data/: badgeData.ts  colorMappingData.ts  fireDepartmentData.ts
src/pages/: Admin.tsx  Home.tsx  Setting.tsx
src/utils/: heatmapUtils.ts
(+12 files in other folders)
