[project]
name = "zonewatch-backend"
version = "0.1.0"
description = "Zone Watch backend API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.43",
    "pydantic>=2.11.7",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "alembic>=1.16.5",
    "email-validator>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.3.0",
    "python-jose>=3.5.0",
    "pydantic-settings>=2.10.1",
    "psycopg2-binary>=2.9.10",
    "cryptography>=45.0.7",
    "mlflow>=3.4.0",
    "python-multipart>=0.0.20",
    "loguru>=0.7.3",
    "orjson>=3.11.3",
    "PyYAML>=6.0.2",
    "requests>=2.32.5",
    "sentry-sdk>=2.35.2",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "mypy",
    "ruff",
    "pre-commit"
]

[tool.setuptools]
packages = {find = {where = ["app"]}}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
exclude = ["alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG001"]
ignore = ["E501", "B008", "W191", "B904"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true